--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-fastapi==0.115.0
-uvicorn==0.34.0
-python-dotenv==1.0.0
-wled==0.2.2
-tuya-pycamera==0.2.0
-opencv-python-headless==4.10.0.84
-Pillow==11.0.0
-aiosqlite==0.20.0
+fastapi>=0.100.0
+uvicorn[standard]>=0.20.0
+python-dotenv>=1.0.0
+wled>=0.1.0
+Pillow>=10.0.0
+aiosqlite>=0.19.0
+httpx>=0.24.0
